Fix typo in table making script

--- a/workflow/scripts/tsv2html.Rmd
+++ b/workflow/scripts/tsv2html.Rmd
@@ -12,6 +12,6 @@ reactable(dt,
 	filterable = TRUE, 
 	showPageSizeOptions = TRUE,
 	defaultPageSize = 25,
-	resizeable = TRUE,
+	resizable = TRUE,
 	wrap = FALSE)
 ```
