Large reformatting of everything
Reformatting paths and making things match with snakemake best practices

--- a/workflow/scripts/plot_evaladmix.Rmd
+++ b/workflow/scripts/plot_evaladmix.Rmd
@@ -3,6 +3,8 @@ output: html_document
 ---
 
 ```{r, echo = FALSE}
+sink(file(snakemake@log[[1]], open="wt"), type = "message")
+
 plot_evaladmix <- function(pop,qopt,corres,k) {
 
 	source("/usr/local/bin/visFuns.R")
